--- a/project.css
+++ b/project.css
@@ -92,6 +92,7 @@ input {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin: auto 10px;
 }
 
 .project {
@@ -104,7 +105,7 @@ input {
   border-radius: 15px;
   overflow: hidden;
   text-align: center;
-  margin: 0 25px;
+  margin: 0 15px;
   cursor: pointer;
   transition: 0.5s;
   flex-direction: column; /* Đặt hướng flex sang dọc */
