--- a/project.css
+++ b/project.css
@@ -11,8 +11,7 @@
 }
 
 body {
-  height: 100vh;
-  overflow: hidden;
+  height: 200vh;
   background-image: linear-gradient(
     45deg,
     rgb(65, 88, 208) 0%,
@@ -75,6 +74,7 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column; /* Thêm dòng này để dọc hóa các phần tử con */
   margin: 30px 10px;
 }
 
@@ -92,7 +92,7 @@ input {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: auto 10px;
+  margin-bottom: 20px;
 }
 
 .project {
@@ -106,9 +106,10 @@ input {
   overflow: hidden;
   text-align: center;
   margin: 0 15px;
+  margin-bottom: 20px; /* Thêm dòng này để tạo khoảng cách với phần tử dưới */
   cursor: pointer;
   transition: 0.5s;
-  flex-direction: column; /* Đặt hướng flex sang dọc */
+  flex-direction: column;
   gap: 50px;
 }
 
